@@ -1,3 +1,5 @@
+docker==5.0.3
 docker-compose==1.29.2
 PyInquirer==1.0.3
 pbr==5.8.1
+plumbum==1.7.2
