@@ -1,4 +1,5 @@
 CHANGES
 =======
 
+* basic skeleton
 * Initial commit
